compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_annotation_aliased.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 1167
expression: "\nimport wibble/wobble\n\ntype Wubble = wobble.Wibble\n\nfn main(wibble: Wubble) {\n  wibble\n}\n"
---
import wibble/wobble

type Wubble = wobble.Wibble

fn main(wibble: Wubble) {
                ▔▔▔▔▔↑   
  wibble
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nwobble.Wibble\n```\n",
    ),
)
