compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_annotation_unqualified_aliased.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 1131
expression: "\nimport wibble/wobble.{type Wibble as Wubble}\n\nfn main(wibble: Wubble) {\n  wibble\n}\n"
---
import wibble/wobble.{type Wibble as Wubble}

fn main(wibble: Wubble) {
                ↑▔▔▔▔▔   
  wibble
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nwobble.Wibble\n```\n",
    ),
)
