compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_external_function_with_another_value_same_name.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 368
expression: "\nimport a/example_module.{my_const as discarded}\nimport b/example_module.{my_const} as _\nfn main() {\n    my_const\n}\n"
---
import a/example_module.{my_const as discarded}
import b/example_module.{my_const} as _
fn main() {
    my_const
    ▔▔▔▔↑▔▔▔
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nInt\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/b/example_module.html#my_const)",
    ),
)
