compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_external_imported_unqualified_function.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 235
expression: "\nimport example_module.{my_fn}\nfn main() {\n  my_fn\n}\n"
---
import example_module.{my_fn}
fn main() {
  my_fn
  ▔▔▔↑▔
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nfn() -> Nil\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/example_module.html#my_fn)",
    ),
)
