compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_for_pattern_spread_ignoring_some_fields.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 708
expression: "\npub record Model {\n  Model(\n    Int,\n    Float,\n    label1: Int,\n    label2: String,\n  )\n}\n\npub fn main() {\n  case todo {\n    Model(_, label1: _, ..) -> todo\n  }\n}\n"
---
pub record Model {
  Model(
    Int,
    Float,
    label1: Int,
    label2: String,
  )
}

pub fn main() {
  case todo {
    Model(_, label1: _, ..) -> todo
                        ▔↑         
  }
}


----- Hover content -----
Scalar(
    String(
        "Unused positional fields:\n- `Float`\n\nUnused labelled fields:\n- `label2: String`",
    ),
)
