compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_function_arg_annotation_with_documentation.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\nrecord Wibble {\n    Wibble(arg: String)\n}\n\nfn identity(x: Wibble) -> Wibble {\n  x\n}\n"
---
/// Exciting documentation
/// Maybe even multiple lines
record Wibble {
    Wibble(arg: String)
}

fn identity(x: Wibble) -> Wibble {
               ▔▔▔▔▔↑             
  x
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nWibble\n```\n Exciting documentation\n Maybe even multiple lines\n",
    ),
)
