compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_import_unqualified_type.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 658
expression: "\nimport example_module.{type MyType, MyType}\nfn main() -> MyType {\n  MyType\n}\n"
---
import example_module.{type MyType, MyType}
                       ▔▔▔▔▔▔▔▔▔▔↑         
fn main() -> MyType {
  MyType
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nexample_module.MyType\n```\n Exciting documentation\n Maybe even multiple lines\n",
    ),
)
