compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_import_unqualified_value_from_hex.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport example_module.{my_num}\nfn main() {\n  my_num\n}\n"
---
import example_module.{my_num}
                       ▔▔▔↑▔▔ 
fn main() {
  my_num
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nInt\n```\n Exciting documentation\n Maybe even multiple lines\n\nView on [HexDocs](https://hexdocs.pm/hex/example_module.html#my_num)",
    ),
)
