compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_label_shorthand_in_call_arg.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nfn wibble(arg1 arg1: Int, arg2 arg2: Bool) { Nil }\n\nfn main() {\n  let arg1 = 1\n  let arg2 = True\n  wibble(arg2:, arg1:)\n}\n"
---
fn wibble(arg1 arg1: Int, arg2 arg2: Bool) { Nil }

fn main() {
  let arg1 = 1
  let arg2 = True
  wibble(arg2:, arg1:)
         ↑▔▔▔▔        
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nBool\n```\nA locally defined variable.",
    ),
)
