compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_label_shorthand_in_pattern_call_arg.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 770
expression: "\npub record Wibble { Wibble(arg1: Int, arg2: Bool) }\n\npub fn main() {\n  case todo {\n    Wibble(arg2:, ..) -> todo\n  }\n}\n"
---
pub record Wibble { Wibble(arg1: Int, arg2: Bool) }

pub fn main() {
  case todo {
    Wibble(arg2:, ..) -> todo
           ▔▔▔▔↑             
  }
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nBool\n```\n",
    ),
)
